added dto and its validation, error handling
